--- a/html/index03.html
+++ b/html/index03.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>&#128148;&#128148;&#128148;Hi~~ Clock Gallery</title>
+    <title>&#128148;&#128148;&#128148;Hi~~ famous saying</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/swiper-bundle.css" />
     <link rel="stylesheet" href="../css/fullpage.css" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/main02.css" />
+    <link rel="stylesheet" href="../css/main03.css" />
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/js.cookie.min.js"></script>
     <script src="../js/splitting.min.js"></script>
@@ -25,32 +25,20 @@
     <script src="../js/fullpage.min.js"></script>
     <script src="../js/fullpage.extensions.min.js"></script>
     <script src="../js/axios.min.js"></script>
-    <script src="../js/main02.js" defer></script>
+    <script src="../js/main03.js" defer></script>
   </head>
   <body>
     <header id="header">
-      <h1 id="logo">CUBE</h1>
+      <h1 id="logo">famous <strong>saying</strong></h1>
     </header>
     <main id="main">
-      <div class="scene">
-        <div class="carousel">
-          <div class="face">SECTION01</div>
-          <div class="face">SECTION02</div>
-          <div class="face">SECTION03</div>
-          <div class="face">SECTION04</div>
-          <div class="face">SECTION05</div>
-          <div class="face">SECTION06</div>
-          <div class="face">SECTION07</div>
-          <div class="face">SECTION08</div>
-          <div class="face">SECTION09</div>
-          <div class="face">SECTION10</div>
-          <div class="face">SECTION11</div>
-          <div class="face">SECTION12</div>
-        </div>
-      </div>
+      <div id="cubeBox"></div>
       <div class="pagination">
-        <button class="prev"><span class="material-icons"> chevron_left </span></button>
-        <button class="next"><span class="material-icons"> chevron_right </span></button>
+        <ul></ul>
+        <div class="btns">
+          <button class="auto"><span class="material-icons"> play_arrow </span></button>
+          <button class="pause"><span class="material-icons"> pause </span></button>
+        </div>
       </div>
     </main>
   </body>
